# LunaAI

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  TODO_FEATURES.md  main.py  main2.py  memory_tools_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adapters/: __init__.py  adapter_factory.py  anthropic_adapter.py  base_adapter.py  console_adapter.py  elasticsearch_adapter.py  gemini_adapter.py  logging_adapter.py  openai_adapter.py
adapters/api/: client.py
anthropic_documentation/: api_ref_messages.html  tools_overview.html
config/: __init__.py  settings.py
core/: __init__.py  agent.py  hub.py  prompt.py
docs/: CI_PIPELINE.md
domain/: README.md
domain/models/: agent.py  config.py  (+13 more)
persona_configs/: backstory.md  identity.md  luna.json  personality.md
scripts/: ELASTICSEARCH_TOOLS.md  ci_check.sh  compare_adapters.py  es_count_memories.py  es_delete_index.py  es_delete_memory.py  es_insert_memory.py  es_interactive_memory.py  es_interactive_profile.py  es_interactive_relationship.py  es_list_indices.py  es_list_memories.py  es_rebuild_indices.py  es_update_timestamp.py  example_memory.json  format.sh  lint.sh  run_comparison.sh  setup_dev.sh  start_elasticsearch.sh  synth_dataset_personality.py  test.sh
services/: __init__.py  context_state_service.py  conversation_service.py  emotion_service.py  memory_service.py  persona_service.py  prompt_service.py  time_awareness_service.py  user_service.py
system_prompts/: BasicTemplate.xml  Template.xml
tests/: __init__.py
(+89 files in other folders)
